# eventyay

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLA.md  CODEX.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  MANIFEST.in  Makefile  NOTICE  ORDER_FORMS_REFACTOR.md  PR_1348_FIXES_SUMMARY.md  README.rst  WIKIMEDIA_USERNAME_FIX_PLAN.md  WIKIMEDIA_USERNAME_TESTING_GUIDE.md  agents.md  app.yaml  architecture-diagram.md  cloudbuild.yaml  cloudrun-migration.yaml  cloudrun-web.yaml  cloudrun-worker.yaml  cloudrun.yaml  create_test_user.py  deb-packages.txt  debug_settings.py  docker-compose.yml  fly.toml  gsoc-proposal.md  move_block.py  package-lock.json  package.json  pyproject.toml  railway.json  render.yaml  setup.md  test.html  test_compress.py  (+2 more)
app/: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.prod  MANIFEST.in  Makefile  create_user.py  debug_network.py  dump.rdb  entrypoint.prod.sh  entrypoint.sh  eventyay.cfg  eventyay.cfg.dev  manage.py  pyproject.toml
app/eventyay/: __main__.py  celery.py  consts.py  jinja.py
app/eventyay/agenda/: apps.py  etherpad.py  export_resources.py  permissions.py  signals.py  tasks.py  urls.py
app/eventyay/agenda/views/: featured.py  feed.py  public.py  schedule.py  speaker.py  talk.py  utils.py  widget.py
app/eventyay/api/: apps.py  documentation.py  exception.py  middleware.py  mixins.py  models.py  permissions.py  schema.py  task.py  urls.py  utils.py  versions.py  webhooks.py
app/eventyay/api/auth/: api_auth.py  device.py  devicesecurity.py  permission.py  token.py
app/eventyay/base/: admin.py  admission_validity.py  apps.py  auth.py  cache.py  cache_keys.py  cache_warm.py  email.py  email.py.save  image_safety.py  import_utils.py  invoice.py  metrics.py  middleware.py  notifications.py  orderimport.py  payment.py  pdf.py  plugins.py  reldate.py  schedule_cache.py  secrets.py  settings.py  signals.py  storage.py  tasks.py  timeline.py  validators.py
app/eventyay/cfp/: flow.py  permissions.py  phrases.py  urls.py
app/eventyay/common/: apps.py  checks.py  consts.py  context_processors.py  exceptions.py  exporter.py  image.py  language.py  log_display.py  mail.py  permissions.py  plugins.py  sanitizers.py  signals.py  social_links.py  tasks.py  urls.py  video_embed.py
app/eventyay/config/: asgi.py  dev_settings.py  eventyay.ci.toml  eventyay.dev.toml  eventyay.development.toml  eventyay.production.toml  eventyay.testing.toml  next_settings.py  settings.py  urls.py  wsgi.py
app/eventyay/control/: checkin_app.py  context.py  logdisplay.py  middleware.py  navigation.py  permissions.py  signals.py  tasks.py  urls.py  urls_admin.py
app/eventyay/core/: permissions.py
app/eventyay/event/: forms.py  services.py  stages.py
app/eventyay/eventyay_common/: adapter.py  base_tasks.py  context.py  models.py  navigation.py  permissions.py  tasks.py  urls.py
app/eventyay/helpers/: compressor.py  cookies.py  countries.py  http.py  i18n.py  i18n_utils.py  image_optimize.py  jinja.py  json.py  jwt_generate.py  models.py  periodic.py  safedownload.py  security.py  stripe_utils.py  timezone.py
app/eventyay/jinja-templates/: macros.jinja
app/eventyay/locale/: django.pot  djangojs.pot
app/eventyay/mail/: context.py  default_templates.py
app/eventyay/multidomain/: maindomain_urlconf.py  middlewares.py  plugin_handler.py  redirects.py  urlreverse.py  views.py
app/eventyay/orga/: context_processors.py  permissions.py  signals.py  tasks.py  urls.py
app/eventyay/person/: exporters.py  social_link_mixin.py  tasks.py  utils.py
app/eventyay/presale/: context.py  ical.py  organizer_exports.py  signals.py  startpage_events.py  style.py  urls.py  utils.py
app/eventyay/schedule/: exporters.py  forms.py  signals.py
app/eventyay/storage/: external.py  views.py
app/eventyay/submission/: constants.py  exporters.py  permissions.py
app/eventyay/talk_rules/: agenda.py  event.py  orga.py  submission.py  tracks.py
app/eventyay/utils/: http.py
app/eventyay/webapp/: SMOKE_TEST.md  config.js  index.html  package-lock.json  package.json  vite.config.js
app/management/commands/: dev_check.py
app/tests/: conftest.py  test_cfp_submission.py  test_cfp_valid_submission.py  test_common.py  test_control.py  test_healthcheck.py  test_i18n_utils.py  test_image_optimize.py  test_social_auth_1525.py
app/tests/base/: test_cache_redis.py  test_email_qr_placeholders.py  test_image_safety.py  test_issue_1393.py  test_telemetry.py
app/tests/billing/: test_stripe_webhook_task.py
app/tests/common/: test_email_editor_fields.py  test_login_redirect_helpers.py  test_sanitizers.py
app/tests/control/: test_navigation_order.py
app/tests/eventyay_common/: conftest.py  test_auth_login_tags.py  test_bbb_presentations.py  test_checkout_login_tags.py  test_event_private_testmode.py  test_event_publication_form.py  test_event_settings_images.py  test_meetup_creation.py  test_meetup_rsvp.py  test_organizer_analytics.py  test_organizer_public_profile_link.py  test_organizer_settings_images.py  test_question_dependency_mixin.py  test_speaker_avatar_import.py  test_ticket_dashboard_permissions.py  test_tickets_dashboard_permissions.py
app/tests/stable/: __init__.py  conftest.py  test_api.py  test_attendee_direct_message_permission.py  test_bbb_move_room.py  test_bbb_update_cost.py  test_cfp_draft_forms.py  test_common.py  test_control.py  test_draft_submission.py  test_dropdown_e2e.py  test_featured.py  test_featured_speakers.py  test_healthcheck.py  test_htmx_orders.py  test_hybrid_attendee_experience.py  test_multiple_languages_widget.py  test_orderforms.py  test_presale.py  test_publication.py  test_room_unscheduled.py  test_schedule_cache.py  test_stage_streaming.py  test_video_admin_access.py  test_video_admin_permissions.py  test_video_jwt_required.py
app/tests/talk/: conftest.py  dummy_app.py  dummy_signals.py
app/tests/testutils/: __init__.py  mock.py  sessions.py  settings.py
app/tests/tickets/: settings.py  test_queuedmail_scheduling.py
app/tests/video/: conftest.py  utils.py
app/tools/: check_po_placeholders.py
(+3099 files in other folders)
